--- a/sick-fits/frontend/package.json
+++ b/sick-fits/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "test": "NODE_ENV=test jest --watch",
-    "heroku-postbuild": "next build"
+    "heroku-postbuild": "next build",
+    "format": "prettier --write \"pages/**/*.js\" \"components/**/*.js\""
   },
   "author": "",
   "license": "ISC",
