--- a/sick-fits/frontend/package.json
+++ b/sick-fits/frontend/package.json
@@ -9,7 +9,15 @@
     "start": "next start",
     "test": "NODE_ENV=test jest --watch",
     "heroku-postbuild": "next build",
-    "format": "prettier --write \"pages/**/*.js\" \"components/**/*.js\""
+    "format": "prettier --write \"pages/**/*.js\" \"components/**/*.js\"",
+    "lint": "eslint src",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run format",
+      "git add"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -39,13 +47,20 @@
     "waait": "^1.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "casual": "^1.5.19",
     "enzyme-to-json": "^3.3.4",
+    "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "graphql-tools": "^4.0.0",
+    "husky": "^1.2.0",
     "jest": "^23.6.0",
-    "jest-transform-graphql": "^2.1.0"
+    "jest-transform-graphql": "^2.1.0",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.3"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/jest.setup.js",
