--- a/sick-fits/frontend/.eslintrc
+++ b/sick-fits/frontend/.eslintrc
@@ -1,16 +1,27 @@
 {
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2018
+    "ecmaVersion": 8,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "experimentalObjectRestSpread": true
+    }
   },
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "react"],
   "rules": {
     "prettier/prettier": ["error", { "singleQuote": true, "semi": false }],
-    "no-unused-vars": "warn",
-    "no-undef": "error"
+    "no-unused-vars": ["warn"],
+    "react/jsx-uses-react": "warn",
+    "react/jsx-uses-vars": "warn",
+    "no-undef": "error",
+    "react/jsx-no-undef": "error"
   },
   "env": {
+    "browser": true,
     "node": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "extends": ["prettier"]
 }
